<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/itemsFragment">

    <fragment
        android:id="@+id/itemsFragment"
        android:name="com.denis.github_users.presentation.itemsList.ItemsFragment"
        android:label="Items"
        tools:layout="@layout/items_fragment">

        <action
            android:id="@+id/action_itemsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.denis.github_users.presentation.details.DetailsFragment"
        android:label="DetailsFragment"
        tools:layout="@layout/details_fragment">
        <argument
            android:name="login"
            app:argType="string" />
    </fragment>


</navigation>